k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - portfolio.192.168.122.147.sslip.io
      secretName: portfolio-tls
  rules:
    - host: portfolio.192.168.122.147.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
